[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Flecha.png" type="Texture" id=1]
[ext_resource path="res://enemies/skull/bulletSkull.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.4377
height = 56.1033

[node name="arrowenemie" type="Area2D" groups=[
"bullet_enemie",
]]
collision_layer = 31
collision_mask = 31
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"bullet_enemie",
]]
rotation = 1.57411
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="."]
modulate = Color( 0.85098, 1, 0, 1 )
position = Vector2( 0.183777, -0.00814724 )
z_index = 3
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 5.91477, 0.434166 )
scale = Vector2( 15.953, 1.07492 )
[connection signal="area_entered" from="." to="." method="_on_arrowenemie_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_arrowenemie_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
